img overflow fix

--- a/css/media.css
+++ b/css/media.css
@@ -14,7 +14,7 @@
   }
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1200px) {
   #desktop-nav {
     display: none;
   }
@@ -54,11 +54,12 @@
 
   .about-containers {
     margin-top: 0 5%;
+    /* margin-top: 2rem; */
     ;
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 600px) {
 
   #contact,
   footer {
@@ -117,7 +118,6 @@
   .about-profile-pic {
     width: 55vw;
     height: 55vw;
-    justify-content: center;
   }
 
   .section__text__p2 {
